# Map-Reduce

./: CMakeLists.txt  README.md  checker.py  main.c  main_cmp.c  run_all_tests.sh  script.py  test_all_operations.sh  test_comparison.sh
include/: mappers.h  mr_sys.h  pair.h  partition.h  reducers.h  thread_pool.h
samples/: 01.txt  02.txt  03.txt  averages.txt  department_max_1.txt  department_max_2.txt  department_max_3.txt  numbers_sum.txt  random_word_count_1.txt  random_word_count_2.txt  random_word_count_3.txt  random_word_count_4.txt  random_word_count_5.txt  word_count_1.txt  word_count_2.txt  word_count_3.txt
src/: CMakeLists.txt  mappers.c  mr_sys.c  pair.c  partition.c  reducers.c  thread_pool.c
